# saghetti

./: .gitignore  README.md  pyproject.toml
saghetti/: animation.py  cli.py
